--- a/Lin_reg.ipynb
+++ b/Lin_reg.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Lin_reg.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOj3DKiUOz6Oc6EITrQQZNN",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOcGdXcReyx4yXWjd/yjWUn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -117,12 +118,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "64db195d-beef-4dc6-ad67-68c78e18d608"
+        "outputId": "663d66b0-7bf2-4376-be17-68f99b82c04f"
       },
       "source": [
-        "def line(x,y):\n",
-        "    stock1 = yf.Ticker(x)    \n",
-        "    stock2 = yf.Ticker(y)    \n",
+        "def line(p,q):\n",
+        "    stock1 = yf.Ticker(p)    \n",
+        "    stock2 = yf.Ticker(q)    \n",
         "    hist1 = stock1.history(period=\"246d\")\n",
         "    hist2 = stock2.history(period=\"246d\")\n",
         "    data1=hist1[\"Close\"]\n",
@@ -167,8 +168,10 @@
         "    #see??= std_error\n",
         "    #type(residuals2)\n",
         "    sigma=stdev(r)\n",
+        "    si=round(sigma,3)\n",
         "    std_err=r[244]/sigma\n",
-        "    print(std_err)\n",
+        "    st_er=round(std_err,3)\n",
+        "    #print(std_err)\n",
         "    res1.hist()\n",
         "    plt.show()\n",
         "    p_value = r.values\n",
@@ -179,23 +182,23 @@
         "    for key, value in result[4].items():\n",
         "\t    print('\\t%s: %.3f' % (key, value))\n",
         "    result[1]\n",
-        "    sheet=[[y,x,result[1],std_err,sigma]]\n",
+        "    pv= round(result[1],3)\n",
+        "    sheet=[[q,p,pv,st_er,si]]\n",
         "    df = pd.DataFrame(sheet, columns = ['ystock','xstock','pvalue','std_err','sigma'])\n",
         "    print(df)\n",
         "for a in symbol1:\n",
         "  for b in symbol2:\n",
         "      asdf=line(a,b)\n",
-        "      print(asdf)\n",
+        "      asdf\n",
         "    "
       ],
-      "execution_count": 12,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "error ratio1: 0.61285644669717\n",
-            "error ratio2: 0.35658571892154656\n",
-            "0.041924340857482846\n"
+            "error ratio2: 0.35658571892154656\n"
           ],
           "name": "stdout"
         },
@@ -221,14 +224,10 @@
             "\t1%: -3.457\n",
             "\t5%: -2.873\n",
             "\t10%: -2.573\n",
-            "                                              ystock  ...     sigma\n",
-            "0  [[299.3], [308.05], [306.9], [314.65], [312.1]...  ...  66.58143\n",
-            "\n",
-            "[1 rows x 5 columns]\n",
-            "None\n",
+            "    ystock       xstock  pvalue  std_err   sigma\n",
+            "0  SBIN.NS  HDFCBANK.NS   0.173    0.042  66.581\n",
             "error ratio1: 0.61285644669717\n",
-            "error ratio2: 0.8222362612800833\n",
-            "-1.917570849014673\n"
+            "error ratio2: 0.8222362612800833\n"
           ],
           "name": "stdout"
         },
@@ -254,14 +253,10 @@
             "\t1%: -3.458\n",
             "\t5%: -2.874\n",
             "\t10%: -2.573\n",
-            "                                              ystock  ...       sigma\n",
-            "0  [[694.85], [690.8], [693.55], [687.91], [690.0...  ...  101.635348\n",
-            "\n",
-            "[1 rows x 5 columns]\n",
-            "None\n",
+            "    ystock       xstock  pvalue  std_err    sigma\n",
+            "0  INFY.NS  HDFCBANK.NS   0.533   -1.918  101.635\n",
             "error ratio1: 0.9295095349926039\n",
-            "error ratio2: 0.35658571892154656\n",
-            "1.3421885139662006\n"
+            "error ratio2: 0.35658571892154656\n"
           ],
           "name": "stdout"
         },
@@ -287,14 +282,10 @@
             "\t1%: -3.457\n",
             "\t5%: -2.873\n",
             "\t10%: -2.573\n",
-            "                                              ystock  ...      sigma\n",
-            "0  [[299.3], [308.05], [306.9], [314.65], [312.1]...  ...  93.440837\n",
-            "\n",
-            "[1 rows x 5 columns]\n",
-            "None\n",
+            "    ystock  xstock  pvalue  std_err   sigma\n",
+            "0  SBIN.NS  TCS.NS   0.021    1.342  93.441\n",
             "error ratio1: 0.9295095349926039\n",
-            "error ratio2: 0.8222362612800833\n",
-            "-0.6146280849944911\n"
+            "error ratio2: 0.8222362612800833\n"
           ],
           "name": "stdout"
         },
@@ -320,11 +311,8 @@
             "\t1%: -3.457\n",
             "\t5%: -2.873\n",
             "\t10%: -2.573\n",
-            "                                              ystock  ...      sigma\n",
-            "0  [[694.85], [690.8], [693.55], [687.91], [690.0...  ...  99.307835\n",
-            "\n",
-            "[1 rows x 5 columns]\n",
-            "None\n"
+            "    ystock  xstock  pvalue  std_err   sigma\n",
+            "0  INFY.NS  TCS.NS   0.072   -0.615  99.308\n"
           ],
           "name": "stdout"
         }
