--- a/Lin_reg.ipynb
+++ b/Lin_reg.ipynb
@@ -6,7 +6,7 @@
       "name": "Lin_reg.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOcGdXcReyx4yXWjd/yjWUn",
+      "authorship_tag": "ABX9TyPGCFIxSsy2p37vPe1kd2/6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -118,7 +118,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "663d66b0-7bf2-4376-be17-68f99b82c04f"
+        "outputId": "4d6fed36-bcd7-4ad9-d84d-14b014727584"
       },
       "source": [
         "def line(p,q):\n",
@@ -162,8 +162,19 @@
         "    er_ratio2 = sqrt(1./len(y) + my*my/sy2)\n",
         "    print('error ratio1:',er_ratio1)\n",
         "    print('error ratio2:',er_ratio2)\n",
+        "    def res(x,y):\n",
+        "        if (x<y):\n",
+        "            r=res1\n",
+        "            return(r)\n",
+        "        if (x>y):\n",
+        "            r=res2\n",
+        "            return(r)\n",
+        "    r=res(er_ratio1,er_ratio2)\n",
+        "    #if (er_ratio1<er_ratio2):\n",
+        "        #return res1 as r\n",
+        "    #elif():\n",
+        "        #return res2 as r\n",
         "    #sd_intercept = see * sqrt(1./len(x) + mx*mx/sx2)\n",
-        "    r=res2\n",
         "    #sd_slope = see * sqrt(1./sx2)\n",
         "    #see??= std_error\n",
         "    #type(residuals2)\n",
@@ -176,11 +187,11 @@
         "    plt.show()\n",
         "    p_value = r.values\n",
         "    result = adfuller(p_value)\n",
-        "    print('ADF Statistic: %f' % result[0])\n",
-        "    print('p-value: %f' % result[1])\n",
-        "    print('Critical Values:')\n",
-        "    for key, value in result[4].items():\n",
-        "\t    print('\\t%s: %.3f' % (key, value))\n",
+        "    #print('ADF Statistic: %f' % result[0])\n",
+        "    #print('p-value: %f' % result[1])\n",
+        "    #print('Critical Values:')\n",
+        "    #for key, value in result[4].items():\n",
+        "\t    #print('\\t%s: %.3f' % (key, value))\n",
         "    result[1]\n",
         "    pv= round(result[1],3)\n",
         "    sheet=[[q,p,pv,st_er,si]]\n",
@@ -192,7 +203,7 @@
         "      asdf\n",
         "    "
       ],
-      "execution_count": 18,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,12 +229,6 @@
         {
           "output_type": "stream",
           "text": [
-            "ADF Statistic: -2.296581\n",
-            "p-value: 0.173073\n",
-            "Critical Values:\n",
-            "\t1%: -3.457\n",
-            "\t5%: -2.873\n",
-            "\t10%: -2.573\n",
             "    ystock       xstock  pvalue  std_err   sigma\n",
             "0  SBIN.NS  HDFCBANK.NS   0.173    0.042  66.581\n",
             "error ratio1: 0.61285644669717\n",
@@ -247,14 +252,8 @@
         {
           "output_type": "stream",
           "text": [
-            "ADF Statistic: -1.500592\n",
-            "p-value: 0.533219\n",
-            "Critical Values:\n",
-            "\t1%: -3.458\n",
-            "\t5%: -2.874\n",
-            "\t10%: -2.573\n",
-            "    ystock       xstock  pvalue  std_err    sigma\n",
-            "0  INFY.NS  HDFCBANK.NS   0.533   -1.918  101.635\n",
+            "    ystock       xstock  pvalue  std_err   sigma\n",
+            "0  INFY.NS  HDFCBANK.NS   0.154    0.442  47.197\n",
             "error ratio1: 0.9295095349926039\n",
             "error ratio2: 0.35658571892154656\n"
           ],
@@ -276,12 +275,6 @@
         {
           "output_type": "stream",
           "text": [
-            "ADF Statistic: -3.183084\n",
-            "p-value: 0.020985\n",
-            "Critical Values:\n",
-            "\t1%: -3.457\n",
-            "\t5%: -2.873\n",
-            "\t10%: -2.573\n",
             "    ystock  xstock  pvalue  std_err   sigma\n",
             "0  SBIN.NS  TCS.NS   0.021    1.342  93.441\n",
             "error ratio1: 0.9295095349926039\n",
@@ -305,12 +298,6 @@
         {
           "output_type": "stream",
           "text": [
-            "ADF Statistic: -2.709211\n",
-            "p-value: 0.072458\n",
-            "Critical Values:\n",
-            "\t1%: -3.457\n",
-            "\t5%: -2.873\n",
-            "\t10%: -2.573\n",
             "    ystock  xstock  pvalue  std_err   sigma\n",
             "0  INFY.NS  TCS.NS   0.072   -0.615  99.308\n"
           ],
