--- a/Technical.ipynb
+++ b/Technical.ipynb
@@ -6,7 +6,7 @@
       "name": "Technical.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMJ1JLn10pFdQiphsGjWR5u",
+      "authorship_tag": "ABX9TyNFFJlq0RzPwWimoAWEpMt8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,10 +30,10 @@
       "metadata": {
         "id": "hkW4T9LX0lVs",
         "colab_type": "code",
-        "outputId": "ca498f37-f863-4d31-bed1-e87857543907",
+        "outputId": "f35d0d7d-83e9-4939-9cdf-b52506418816",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 253
+          "height": 397
         }
       },
       "source": [
@@ -41,23 +41,31 @@
         "import pandas as pd\n",
         "!pip install yfinance"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: yfinance in /usr/local/lib/python3.6/dist-packages (0.1.54)\n",
-            "Requirement already satisfied: multitasking>=0.0.7 in /usr/local/lib/python3.6/dist-packages (from yfinance) (0.0.9)\n",
-            "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.6/dist-packages (from yfinance) (1.18.4)\n",
+            "Collecting yfinance\n",
+            "  Downloading https://files.pythonhosted.org/packages/c2/31/8b374a12b90def92a4e27d0fc595fc43635f395984e36a075244d98bd265/yfinance-0.1.54.tar.gz\n",
             "Requirement already satisfied: pandas>=0.24 in /usr/local/lib/python3.6/dist-packages (from yfinance) (1.0.3)\n",
+            "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.6/dist-packages (from yfinance) (1.18.4)\n",
             "Requirement already satisfied: requests>=2.20 in /usr/local/lib/python3.6/dist-packages (from yfinance) (2.23.0)\n",
-            "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.24->yfinance) (2.8.1)\n",
+            "Requirement already satisfied: multitasking>=0.0.7 in /usr/local/lib/python3.6/dist-packages (from yfinance) (0.0.9)\n",
             "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.24->yfinance) (2018.9)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (1.24.3)\n",
+            "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.24->yfinance) (2.8.1)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (2020.4.5.1)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (2.9)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (1.24.3)\n",
             "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (3.0.4)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.6.1->pandas>=0.24->yfinance) (1.12.0)\n"
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (2.9)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.6.1->pandas>=0.24->yfinance) (1.12.0)\n",
+            "Building wheels for collected packages: yfinance\n",
+            "  Building wheel for yfinance (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for yfinance: filename=yfinance-0.1.54-py2.py3-none-any.whl size=22409 sha256=dc53bacc84d54c0858ff59530bda071734a50ef3415c860eb9405d2baaa606a7\n",
+            "  Stored in directory: /root/.cache/pip/wheels/f9/e3/5b/ec24dd2984b12d61e0abf26289746c2436a0e7844f26f2515c\n",
+            "Successfully built yfinance\n",
+            "Installing collected packages: yfinance\n",
+            "Successfully installed yfinance-0.1.54\n"
           ],
           "name": "stdout"
         }
@@ -68,10 +76,10 @@
       "metadata": {
         "id": "0v_4C_tK8ih4",
         "colab_type": "code",
-        "outputId": "78cec0f2-d436-4844-f62b-cafdc23e63c2",
+        "outputId": "14396260-6475-4190-e57b-986c1c05fb3d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 665
+          "height": 593
         }
       },
       "source": [
@@ -83,6 +91,11 @@
         "stock3=[\"AUROPHARMA.NS\",\"GLENMARK.NS\",\"PEL.NS\",\"BIOCON.NS\",\"DIVISLAB.NS\",\"LUPIN.NS\",\"CADILAHC.NS\",\"SUNPHARMA.NS\",\"DRREDDY.NS\",\"CIPLA.NS\"]\n",
         "stock4=[\"SBIN.NS\",\"HDFCBANK.NS\",\"HDFC.NS\",\"RBLBANK.NS\",\"BANDHANBNK.NS\",\"ICICIBANK.NS\",\"FEDERALBNK.NS\",\"INDUSINDBK.NS\",\"AXISBANK.NS\",\"PNB.NS\",\"KOTAKBANK.NS\",\"BANKBARODA.NS\"]\n",
         "stock5=[\"M&MFIN.NS\",\"CHOLAFIN.NS\",\"ICICIPRULI.NS\",\"IBULHSGFIN.NS\",\"BAJFINANCE.NS\",\"SRTRANSFIN.NS\",\"HDFCLIFE.NS\",\"SBILIFE.NS\",\"RECLTD.NS\",\"BAJAJFINSV.NS\",\"BAJAJHLDNG.NS\",\"ICICIGI.NS\",\"PFC.NS\",\"EDELWEISS.NS\"]\n",
+        "stock6=[\"SOBHA.NS\",\"DLF.NS\",\"OBEROIRLTY.NS\",\"MAHLIFE.NS\",\"SUNTECK.NS\",\"BRIGADE.NS\",\"GODREJPROP.NS\",\"PHOENIXLTD.NS\",\"PRESTIGE.NS\",\"IBREALEST.NS\"]\n",
+        "stock7=[\"VEDL.NS\",\"JSWSTEEL.NS\",\"HINDALCO.NS\",\"WELCORP.NS\",\"HINDCOPPER.NS\",\"APLAPOLLO.NS\",\"RATNAMANI.NS\",\"TATASTEEL.NS\",\"COALINDIA.NS\",\"HINDZINC.NS\",\"NMDC.NS\",\"SAIL.NS\",\"MOIL.NS\",\"NATIONALUM\",\"JINDALSTEL.NS\"]\n",
+        "stock8=[\"BALAJITELE.NS\",\"TV18BRDCST.NS\",\"NETWORK18.NS\",\"SUNTV.NS\",\"DISHTV.NS\",\"ZEEMEDIA.NS\",\"PVR.NS\",\"JUMPNET.NS\",\"ZEEL.NS\",\"INOXLEISUR.NS\",\"TVTODAY.NS\",\"DBCORP.NS\",\"JAGRAN.NS\",\"SAREGAMA.NS\"]\n",
+        "stock9=[\"HEXAWARE.NS\",\"TATAELXSI.NS\",\"WIPRO.NS\",\"JUSTDIAL.NS\",\"TCS.NS\",\"INFY.NS\",\"TECHM.NS\",\"HCLTECH.NS\",\"MINDTREE.NS\",\"NIITTECH.NS\"]\n",
+        "#stock10=[]\n",
         "def raw(x):\n",
         "    msft = yf.Ticker(x)\n",
         "    hist = msft.history(period=\"38d\")\n",
@@ -134,13 +147,12 @@
         "    coll=raw(i)\n",
         "    print(coll)\n"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "JUBLFOOD.NS\n",
-            "Doji\n",
             "None\n",
             "TATACONSUM.NS\n",
             "None\n",
@@ -150,26 +162,23 @@
             "PGHH.NS\n",
             "None\n",
             "DABUR.NS\n",
-            "Doji\n",
             "None\n",
             "MCDOWELL-N.NS\n",
             "None\n",
             "BRITANNIA.NS\n",
             "None\n",
             "COLPAL.NS\n",
-            "Hanging man\n",
             "None\n",
             "NESTLEIND.NS\n",
-            "Doji\n",
             "None\n",
             "UBL.NS\n",
             "None\n",
             "GODREJCP.NS\n",
+            "Doji\n",
             "None\n",
             "HINDUNILVR.NS\n",
             "None\n",
             "GODREJIND.NS\n",
-            "Bullish Engulfing\n",
             "None\n",
             "EMAMILTD.NS\n",
             "None\n",
@@ -185,10 +194,10 @@
       "metadata": {
         "id": "4duFJCDg4PYh",
         "colab_type": "code",
-        "outputId": "18c41887-f1d7-4bf7-bad1-2e94b4815761",
+        "outputId": "b51a96e0-af34-49c2-d13a-4b9cce3ff85f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 395
+          "height": 377
         }
       },
       "source": [
@@ -197,7 +206,7 @@
         "    c=raw(i)\n",
         "    print(c)"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -207,7 +216,6 @@
             "NTPC.NS\n",
             "None\n",
             "POWERGRID.NS\n",
-            "Doji\n",
             "None\n",
             "ONGC.NS\n",
             "None\n",
@@ -233,7 +241,7 @@
       "metadata": {
         "id": "acHvY8SQbhIK",
         "colab_type": "code",
-        "outputId": "77fec01e-68f3-4339-8623-4376008ebc7e",
+        "outputId": "ebb681ff-3aa3-4c64-eb87-20d70b547215",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 593
@@ -245,7 +253,7 @@
         "    c=raw(i)    \n",
         "    print(c)"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -261,7 +269,6 @@
             "HEROMOTOCO.NS\n",
             "None\n",
             "BAJAJ-AUTO.NS\n",
-            "Bull Marubozo\n",
             "None\n",
             "APOLLOTYRE.NS\n",
             "None\n",
@@ -270,17 +277,18 @@
             "MRF.NS\n",
             "None\n",
             "EICHERMOT.NS\n",
+            "Hanging man\n",
             "None\n",
             "EXIDEIND.NS\n",
             "None\n",
             "MARUTI.NS\n",
             "None\n",
             "AMARAJABAT.NS\n",
-            "Bull Marubozo\n",
             "None\n",
             "BOSCHLTD.NS\n",
             "None\n",
             "ASHOKLEY.NS\n",
+            "Doji\n",
             "None\n"
           ],
           "name": "stdout"
@@ -292,10 +300,10 @@
       "metadata": {
         "id": "hOnNaVdTbhXg",
         "colab_type": "code",
-        "outputId": "6338d8c6-c54f-468c-ff8d-d0bdaba4d69a",
+        "outputId": "74d3a78a-af10-4561-f16c-7d85c8cd57c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 395
+          "height": 413
         }
       },
       "source": [
@@ -304,7 +312,7 @@
         "    c=raw(i)    \n",
         "    print(c)"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,6 +333,7 @@
             "CADILAHC.NS\n",
             "None\n",
             "SUNPHARMA.NS\n",
+            "Doji\n",
             "None\n",
             "DRREDDY.NS\n",
             "None\n",
@@ -340,10 +349,10 @@
       "metadata": {
         "id": "s4l8Ubfdbi5g",
         "colab_type": "code",
-        "outputId": "3faabfa4-9c2d-4eff-d91e-a0ddd0712840",
+        "outputId": "d50345fd-3807-42fe-896d-a014466d5dc8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 485
+          "height": 467
         }
       },
       "source": [
@@ -352,15 +361,15 @@
         "    c=raw(i)    \n",
         "    print(c)"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "SBIN.NS\n",
-            "Doji\n",
             "None\n",
             "HDFCBANK.NS\n",
+            "Doji\n",
             "None\n",
             "HDFC.NS\n",
             "None\n",
@@ -381,7 +390,6 @@
             "KOTAKBANK.NS\n",
             "None\n",
             "BANKBARODA.NS\n",
-            "Hanging man\n",
             "None\n"
           ],
           "name": "stdout"
@@ -393,10 +401,10 @@
       "metadata": {
         "id": "DBq_xo_Mbott",
         "colab_type": "code",
-        "outputId": "23645c7a-a6ad-4447-f369-c12428defdee",
+        "outputId": "cb1e9b22-638c-4813-889a-98017c7d7fda",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 557
+          "height": 539
         }
       },
       "source": [
@@ -405,7 +413,7 @@
         "    c=raw(i)    \n",
         "    print(c)"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -417,6 +425,7 @@
             "ICICIPRULI.NS\n",
             "None\n",
             "IBULHSGFIN.NS\n",
+            "Hanging man\n",
             "None\n",
             "BAJFINANCE.NS\n",
             "None\n",
@@ -437,8 +446,6 @@
             "PFC.NS\n",
             "None\n",
             "EDELWEISS.NS\n",
-            "Hammer\n",
-            "Hanging man\n",
             "None\n"
           ],
           "name": "stdout"
