--- a/Technical.ipynb
+++ b/Technical.ipynb
@@ -6,7 +6,7 @@
       "name": "Technical.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNFFJlq0RzPwWimoAWEpMt8",
+      "authorship_tag": "ABX9TyPrBjZ0VxEUF2QgNdEqcfNx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,10 +30,10 @@
       "metadata": {
         "id": "hkW4T9LX0lVs",
         "colab_type": "code",
-        "outputId": "f35d0d7d-83e9-4939-9cdf-b52506418816",
+        "outputId": "89b20249-3638-426d-d179-3a4ad8c9f765",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 397
+          "height": 253
         }
       },
       "source": [
@@ -41,31 +41,23 @@
         "import pandas as pd\n",
         "!pip install yfinance"
       ],
-      "execution_count": 1,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Collecting yfinance\n",
-            "  Downloading https://files.pythonhosted.org/packages/c2/31/8b374a12b90def92a4e27d0fc595fc43635f395984e36a075244d98bd265/yfinance-0.1.54.tar.gz\n",
-            "Requirement already satisfied: pandas>=0.24 in /usr/local/lib/python3.6/dist-packages (from yfinance) (1.0.3)\n",
-            "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.6/dist-packages (from yfinance) (1.18.4)\n",
-            "Requirement already satisfied: requests>=2.20 in /usr/local/lib/python3.6/dist-packages (from yfinance) (2.23.0)\n",
+            "Requirement already satisfied: yfinance in /usr/local/lib/python3.6/dist-packages (0.1.54)\n",
             "Requirement already satisfied: multitasking>=0.0.7 in /usr/local/lib/python3.6/dist-packages (from yfinance) (0.0.9)\n",
-            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.24->yfinance) (2018.9)\n",
+            "Requirement already satisfied: pandas>=0.24 in /usr/local/lib/python3.6/dist-packages (from yfinance) (1.0.3)\n",
+            "Requirement already satisfied: requests>=2.20 in /usr/local/lib/python3.6/dist-packages (from yfinance) (2.23.0)\n",
+            "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.6/dist-packages (from yfinance) (1.18.4)\n",
             "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.24->yfinance) (2.8.1)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (2020.4.5.1)\n",
+            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.24->yfinance) (2018.9)\n",
             "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (1.24.3)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (3.0.4)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (2020.4.5.1)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (2.9)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.6.1->pandas>=0.24->yfinance) (1.12.0)\n",
-            "Building wheels for collected packages: yfinance\n",
-            "  Building wheel for yfinance (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for yfinance: filename=yfinance-0.1.54-py2.py3-none-any.whl size=22409 sha256=dc53bacc84d54c0858ff59530bda071734a50ef3415c860eb9405d2baaa606a7\n",
-            "  Stored in directory: /root/.cache/pip/wheels/f9/e3/5b/ec24dd2984b12d61e0abf26289746c2436a0e7844f26f2515c\n",
-            "Successfully built yfinance\n",
-            "Installing collected packages: yfinance\n",
-            "Successfully installed yfinance-0.1.54\n"
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (3.0.4)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.6.1->pandas>=0.24->yfinance) (1.12.0)\n"
           ],
           "name": "stdout"
         }
@@ -76,7 +68,7 @@
       "metadata": {
         "id": "0v_4C_tK8ih4",
         "colab_type": "code",
-        "outputId": "14396260-6475-4190-e57b-986c1c05fb3d",
+        "outputId": "bf78e1b2-3dd6-4194-bf96-610099bd131d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 593
@@ -92,7 +84,7 @@
         "stock4=[\"SBIN.NS\",\"HDFCBANK.NS\",\"HDFC.NS\",\"RBLBANK.NS\",\"BANDHANBNK.NS\",\"ICICIBANK.NS\",\"FEDERALBNK.NS\",\"INDUSINDBK.NS\",\"AXISBANK.NS\",\"PNB.NS\",\"KOTAKBANK.NS\",\"BANKBARODA.NS\"]\n",
         "stock5=[\"M&MFIN.NS\",\"CHOLAFIN.NS\",\"ICICIPRULI.NS\",\"IBULHSGFIN.NS\",\"BAJFINANCE.NS\",\"SRTRANSFIN.NS\",\"HDFCLIFE.NS\",\"SBILIFE.NS\",\"RECLTD.NS\",\"BAJAJFINSV.NS\",\"BAJAJHLDNG.NS\",\"ICICIGI.NS\",\"PFC.NS\",\"EDELWEISS.NS\"]\n",
         "stock6=[\"SOBHA.NS\",\"DLF.NS\",\"OBEROIRLTY.NS\",\"MAHLIFE.NS\",\"SUNTECK.NS\",\"BRIGADE.NS\",\"GODREJPROP.NS\",\"PHOENIXLTD.NS\",\"PRESTIGE.NS\",\"IBREALEST.NS\"]\n",
-        "stock7=[\"VEDL.NS\",\"JSWSTEEL.NS\",\"HINDALCO.NS\",\"WELCORP.NS\",\"HINDCOPPER.NS\",\"APLAPOLLO.NS\",\"RATNAMANI.NS\",\"TATASTEEL.NS\",\"COALINDIA.NS\",\"HINDZINC.NS\",\"NMDC.NS\",\"SAIL.NS\",\"MOIL.NS\",\"NATIONALUM\",\"JINDALSTEL.NS\"]\n",
+        "stock7=[\"VEDL.NS\",\"JSWSTEEL.NS\",\"HINDALCO.NS\",\"WELCORP.NS\",\"HINDCOPPER.NS\",\"APLAPOLLO.NS\",\"RATNAMANI.NS\",\"TATASTEEL.NS\",\"COALINDIA.NS\",\"HINDZINC.NS\",\"NMDC.NS\",\"SAIL.NS\",\"MOIL.NS\",\"NATIONALUM.NS\",\"JINDALSTEL.NS\"]\n",
         "stock8=[\"BALAJITELE.NS\",\"TV18BRDCST.NS\",\"NETWORK18.NS\",\"SUNTV.NS\",\"DISHTV.NS\",\"ZEEMEDIA.NS\",\"PVR.NS\",\"JUMPNET.NS\",\"ZEEL.NS\",\"INOXLEISUR.NS\",\"TVTODAY.NS\",\"DBCORP.NS\",\"JAGRAN.NS\",\"SAREGAMA.NS\"]\n",
         "stock9=[\"HEXAWARE.NS\",\"TATAELXSI.NS\",\"WIPRO.NS\",\"JUSTDIAL.NS\",\"TCS.NS\",\"INFY.NS\",\"TECHM.NS\",\"HCLTECH.NS\",\"MINDTREE.NS\",\"NIITTECH.NS\"]\n",
         "#stock10=[]\n",
@@ -147,7 +139,7 @@
         "    coll=raw(i)\n",
         "    print(coll)\n"
       ],
-      "execution_count": 2,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,7 +186,7 @@
       "metadata": {
         "id": "4duFJCDg4PYh",
         "colab_type": "code",
-        "outputId": "b51a96e0-af34-49c2-d13a-4b9cce3ff85f",
+        "outputId": "70433901-b0a4-41f9-c5d6-e5c28e4d7dca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 377
@@ -206,7 +198,7 @@
         "    c=raw(i)\n",
         "    print(c)"
       ],
-      "execution_count": 3,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,7 +233,7 @@
       "metadata": {
         "id": "acHvY8SQbhIK",
         "colab_type": "code",
-        "outputId": "ebb681ff-3aa3-4c64-eb87-20d70b547215",
+        "outputId": "081179a0-980e-4a02-f372-f508806de3e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 593
@@ -253,7 +245,7 @@
         "    c=raw(i)    \n",
         "    print(c)"
       ],
-      "execution_count": 4,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -300,7 +292,7 @@
       "metadata": {
         "id": "hOnNaVdTbhXg",
         "colab_type": "code",
-        "outputId": "74d3a78a-af10-4561-f16c-7d85c8cd57c5",
+        "outputId": "18bac8f8-b275-43c6-9777-541b4cb04234",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 413
@@ -312,7 +304,7 @@
         "    c=raw(i)    \n",
         "    print(c)"
       ],
-      "execution_count": 5,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,7 +341,7 @@
       "metadata": {
         "id": "s4l8Ubfdbi5g",
         "colab_type": "code",
-        "outputId": "d50345fd-3807-42fe-896d-a014466d5dc8",
+        "outputId": "05e4fe50-5e99-468d-8062-6093e3ea291d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 467
@@ -361,7 +353,7 @@
         "    c=raw(i)    \n",
         "    print(c)"
       ],
-      "execution_count": 6,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -401,7 +393,7 @@
       "metadata": {
         "id": "DBq_xo_Mbott",
         "colab_type": "code",
-        "outputId": "cb1e9b22-638c-4813-889a-98017c7d7fda",
+        "outputId": "f09e8fd7-fa4a-472a-d874-9859b3162a52",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 539
@@ -413,7 +405,7 @@
         "    c=raw(i)    \n",
         "    print(c)"
       ],
-      "execution_count": 7,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,6 +438,152 @@
             "PFC.NS\n",
             "None\n",
             "EDELWEISS.NS\n",
+            "None\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aHxsfDZ0oY42",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "a125af97-335e-449a-daa8-4effd01d561b"
+      },
+      "source": [
+        "for i in stock6:\n",
+        "    print(i)\n",
+        "    c=raw(i)\n",
+        "    print(c)\n",
+        "for i in stock7:\n",
+        "    print(i)\n",
+        "    c=raw(i)\n",
+        "    print(c)\n",
+        "for i in stock8:\n",
+        "    print(i)\n",
+        "    c=raw(i)\n",
+        "    print(c)\n",
+        "for i in stock9:\n",
+        "    print(i)\n",
+        "    c=raw(i)\n",
+        "    print(c)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "SOBHA.NS\n",
+            "Hammer\n",
+            "Hanging man\n",
+            "None\n",
+            "DLF.NS\n",
+            "None\n",
+            "OBEROIRLTY.NS\n",
+            "Bullish Engulfing\n",
+            "None\n",
+            "MAHLIFE.NS\n",
+            "None\n",
+            "SUNTECK.NS\n",
+            "None\n",
+            "BRIGADE.NS\n",
+            "None\n",
+            "GODREJPROP.NS\n",
+            "Doji\n",
+            "None\n",
+            "PHOENIXLTD.NS\n",
+            "None\n",
+            "PRESTIGE.NS\n",
+            "None\n",
+            "IBREALEST.NS\n",
+            "None\n",
+            "VEDL.NS\n",
+            "None\n",
+            "JSWSTEEL.NS\n",
+            "None\n",
+            "HINDALCO.NS\n",
+            "None\n",
+            "WELCORP.NS\n",
+            "None\n",
+            "HINDCOPPER.NS\n",
+            "None\n",
+            "APLAPOLLO.NS\n",
+            "None\n",
+            "RATNAMANI.NS\n",
+            "Hanging man\n",
+            "None\n",
+            "TATASTEEL.NS\n",
+            "Doji\n",
+            "None\n",
+            "COALINDIA.NS\n",
+            "None\n",
+            "HINDZINC.NS\n",
+            "None\n",
+            "NMDC.NS\n",
+            "None\n",
+            "SAIL.NS\n",
+            "None\n",
+            "MOIL.NS\n",
+            "None\n",
+            "NATIONALUM.NS\n",
+            "None\n",
+            "JINDALSTEL.NS\n",
+            "None\n",
+            "BALAJITELE.NS\n",
+            "None\n",
+            "TV18BRDCST.NS\n",
+            "None\n",
+            "NETWORK18.NS\n",
+            "Hammer\n",
+            "None\n",
+            "SUNTV.NS\n",
+            "None\n",
+            "DISHTV.NS\n",
+            "None\n",
+            "ZEEMEDIA.NS\n",
+            "None\n",
+            "PVR.NS\n",
+            "None\n",
+            "JUMPNET.NS\n",
+            "None\n",
+            "ZEEL.NS\n",
+            "Doji\n",
+            "None\n",
+            "INOXLEISUR.NS\n",
+            "None\n",
+            "TVTODAY.NS\n",
+            "Doji\n",
+            "None\n",
+            "DBCORP.NS\n",
+            "None\n",
+            "JAGRAN.NS\n",
+            "None\n",
+            "SAREGAMA.NS\n",
+            "None\n",
+            "HEXAWARE.NS\n",
+            "None\n",
+            "TATAELXSI.NS\n",
+            "None\n",
+            "WIPRO.NS\n",
+            "None\n",
+            "JUSTDIAL.NS\n",
+            "None\n",
+            "TCS.NS\n",
+            "None\n",
+            "INFY.NS\n",
+            "None\n",
+            "TECHM.NS\n",
+            "None\n",
+            "HCLTECH.NS\n",
+            "None\n",
+            "MINDTREE.NS\n",
+            "None\n",
+            "NIITTECH.NS\n",
             "None\n"
           ],
           "name": "stdout"
