--- a/Fin_Pair_py.ipynb
+++ b/Fin_Pair_py.ipynb
@@ -6,7 +6,7 @@
       "name": "Fin_Pair.py",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMuMYyfKYpCx0RXZuJgNP5I",
+      "authorship_tag": "ABX9TyMzwTbsdb/No7r2hoUEvRsj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,7 +104,15 @@
         "sym15=[\"PFC.NS\"]\n",
         "sym16=[\"RBLBANK.NS\",\"EDELWEISS.NS\"]\n",
         "sym17=[\"PNB.NS\"]\n",
-        "sym18=[\"INDUSINDBK.NS\",\"FEDERALBNK.NS\",\"BANKBARODA.NS\"]\n"
+        "sym18=[\"INDUSINDBK.NS\",\"FEDERALBNK.NS\",\"BANKBARODA.NS\"]\n",
+        "sym19=[\"BANDHANBNK.NS\"]\n",
+        "sym20=[\"BAJAJHLDNG.NS\",\"INDUSINDBK.NS\"]\n",
+        "sym21=[\"CHOLAFIN.NS\"]\n",
+        "sym22=[\"BAJAJHLDNG.NS\"]\n",
+        "sym23=[\"HDFCLIFE.NS\"]\n",
+        "sym24=[\"ICICIPRULI.NS\"]\n",
+        "sym25=[\"EDELWEISS.NS\"]\n",
+        "sym26=[\"BANKBARODA.NS\"]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -129,7 +137,7 @@
       "metadata": {
         "id": "WZwXHdwFZXLV",
         "colab_type": "code",
-        "outputId": "309f9fb8-0e37-43a2-ea2a-71602ec49dc2",
+        "outputId": "aaebfc83-9d42-43d3-d173-de84143979bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -258,12 +266,28 @@
         "  for b in sym18:\n",
         "      asdf=line(a,b)\n",
         "      asdf\n",
+        "for a in sym19:\n",
+        "  for b in sym20:\n",
+        "      asdf=line(a,b)\n",
+        "      asdf\n",
+        "for a in sym21:\n",
+        "  for b in sym22:\n",
+        "      asdf=line(a,b)\n",
+        "      asdf\n",
+        "for a in sym23:\n",
+        "  for b in sym24:\n",
+        "      asdf=line(a,b)\n",
+        "      asdf\n",
+        "for a in sym25:\n",
+        "  for b in sym26:\n",
+        "      asdf=line(a,b)\n",
+        "      asdf\n",
         "\n",
         "\n",
         "\n",
         "    "
       ],
-      "execution_count": 53,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -343,24 +367,21 @@
             "          ystock  xstock  pvalue  std_err  sigma       er1       er2\n",
             "0  FEDERALBNK.NS  PNB.NS   0.023   -0.967  7.053  0.262849  0.298115\n",
             "          ystock  xstock  pvalue  std_err  sigma       er1       er2\n",
-            "0  BANKBARODA.NS  PNB.NS  0.0003   -1.212  4.658  0.262849  0.268518\n"
+            "0  BANKBARODA.NS  PNB.NS  0.0003   -1.212  4.658  0.262849  0.268518\n",
+            "          ystock         xstock  pvalue  std_err    sigma       er1       er2\n",
+            "0  BAJAJHLDNG.NS  BANDHANBNK.NS  0.0366   -1.392  260.687  0.257688  0.379306\n",
+            "          ystock         xstock  pvalue  std_err   sigma       er1       er2\n",
+            "0  INDUSINDBK.NS  BANDHANBNK.NS  0.0191    0.259  40.143  0.257688  0.223884\n",
+            "          ystock       xstock  pvalue  std_err    sigma      er1       er2\n",
+            "0  BAJAJHLDNG.NS  CHOLAFIN.NS  0.4952   -0.752  209.747  0.32933  0.379306\n",
+            "          ystock       xstock  pvalue  std_err   sigma       er1       er2\n",
+            "0  ICICIPRULI.NS  HDFCLIFE.NS  0.0122    0.874  28.541  0.498703  0.442374\n",
+            "          ystock        xstock  pvalue  std_err  sigma       er1       er2\n",
+            "0  BANKBARODA.NS  EDELWEISS.NS  0.0403    -2.54  7.149  0.175308  0.268518\n"
           ],
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "j-Rmqh1pIa-U",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
